sample/retrieveUnpackaged/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>AccountId_FORMULA__c</fullName>
        <formula>AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountId_FORMULA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_s_Name__c</fullName>
        <label>Agent&apos;s Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_s_Phone__c</fullName>
        <label>Agent&apos;s Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Alternate_Email_Address_2__c</fullName>
        <label>Alternate Email Address 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Alternate_Email_Address__c</fullName>
        <label>Alternate Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Billing_Accounts_Set_To_Email__c</fullName>
        <formula>if(Account.Number_of_Billing_Accounts__c = 0, &quot;NA&quot;, if(Account.Number_of_Email_Billing_Accounts__c = 0, &quot;NONE&quot;, if(Account.Number_of_Billing_Accounts__c = Account.Number_of_Email_Billing_Accounts__c, &quot;ALL&quot;, &quot;SOME&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Accounts Set To Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CFL__Campaign_Flow_Test_Count__c</fullName>
        <label>Campaign Flow Test Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Concession_Number__c</fullName>
        <label>Concession Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DP_Key__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Duplicate Person Key</label>
        <referenceTo>Duplicate_Person_Key__c</referenceTo>
        <relationshipLabel>Duplicate Person Records</relationshipLabel>
        <relationshipName>DP_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Data_Check_Address_Special_Charactors__c</fullName>
        <formula>IF(OR( 
OR(CONTAINS( MailingCity , &quot;\&quot;&quot;),CONTAINS( MailingCity , &quot;.&quot;)), 
OR(CONTAINS( MailingCountry , &quot;\&quot;&quot;),CONTAINS( MailingCountry , &quot;.&quot;)), 
OR(CONTAINS( MailingPostalCode , &quot;\&quot;&quot;),CONTAINS( MailingPostalCode , &quot;.&quot;)), 
OR(CONTAINS( MailingState , &quot;\&quot;&quot;),CONTAINS( MailingState , &quot;.&quot;)), 
OR(CONTAINS( MailingStreet , &quot;\&quot;&quot;),CONTAINS( MailingStreet , &quot;.&quot;)), 
OR(CONTAINS( MailingCity , &quot;\&quot;&quot;),CONTAINS( OtherCity , &quot;.&quot;)), 
OR(CONTAINS( OtherCountry , &quot;\&quot;&quot;),CONTAINS( OtherCountry , &quot;.&quot;)), 
OR(CONTAINS( OtherPostalCode , &quot;\&quot;&quot;),CONTAINS( OtherPostalCode , &quot;.&quot;)), 
OR(CONTAINS( OtherState , &quot;\&quot;&quot;),CONTAINS( OtherState , &quot;.&quot;)), 
OR(CONTAINS( OtherStreet , &quot;\&quot;&quot;),CONTAINS( OtherStreet , &quot;.&quot;)) 
),&quot;Address has special charactor&quot;, &quot;Address has no special charactor&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data Check Address Special Charactors</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Check_Phone_Not_Number__c</fullName>
        <formula>IF(
(NOT( ISBLANK(Agent_s_Phone__c ))&amp;&amp;NOT( ISNUMBER( Agent_s_Phone__c )))||
(NOT(ISBLANK(HomePhone))&amp;&amp;NOT( ISNUMBER( HomePhone )))||
(NOT(ISBLANK(OtherPhone))&amp;&amp;NOT( ISNUMBER( OtherPhone )))||
(NOT(ISBLANK(Phone))&amp;&amp;NOT( ISNUMBER( Phone ))), &quot;Phone is not number&quot;, &quot;Phone is number or blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data Check Phone Not Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drivers_License_Number__c</fullName>
        <label>Drivers License Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HIDDEN_Is_Portal_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>(Hidden) Is Portal User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HIDDEN_Is_Send_Portal_Registration_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>(Hidden) Send Portal Registration Email?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HIDDEN_Portal_Temporary_Password__c</fullName>
        <label>(Hidden) Portal Temporary Password</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HIDDEN_Portal_User_Confirmation__c</fullName>
        <label>(Hidden) Portal User Confirmation</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HIDDEN_Portal_Username__c</fullName>
        <label>(Hidden) Portal Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HIDDNE_Account_Name__c</fullName>
        <description>Hidden field to hold account name to facilitate search in lookups</description>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(Hidden) Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Insurance_Claim__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Insurance Claim</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Opted_Out_of_Phone__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to determine if the customer has opted out of being contacted by phone</description>
        <label>Has Opted Out of Phone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_Customer_Person__c</fullName>
        <formula>IF( Account.Is_Key_Customer__c ,&quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Key Customer Person</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mail_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mail Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mailing_Address_DPID__c</fullName>
        <label>Mailing Address DPID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Opt_In__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Marketing Opt In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Most_Recent_DD_Start_Date__c</fullName>
        <description>Captures the latest Direct Debit Commencement Date</description>
        <label>Most Recent DD Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Number_of_Active_DD_Billing_Accounts__c</fullName>
        <formula>Account.Number_of_Active_DD_Billing_Accts__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Active DD Billing Accounts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Days_Since_Portal_Registration__c</fullName>
        <description>Indicates the number of days since the user registered for the Portal</description>
        <formula>TODAY()-Portal_User_Since__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Days Since Portal Registration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Days_Since_Sign_up_for_Ebill__c</fullName>
        <description>Indicates the number of days since the last billing account eBilling was set to Email.  If the date is empty/NULL (i.e. they don’t have any accounts with eBill Method of Email), then the value is set to -1.</description>
        <formula>if(ISNULL(Account.Most_Recent_Ebill_Email_Date__c), -1, TODAY()-Account.Most_Recent_Ebill_Email_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Days Since Sign up for Ebill</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_days_since_last_survey__c</fullName>
        <description>Indicates the number of days since the user received a survey</description>
        <formula>IF(ISBLANK(Survey_Completion_Date__c) ||  ISNULL(Survey_Completion_Date__c),-1, TODAY()- Survey_Completion_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of days since last survey</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Organisation_Name__c</fullName>
        <description>The name of the organisation the person works for. This defaults from the customer name, but may be overriden by the user. Usually used for 3rd parties.</description>
        <label>Organisation Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Address_DPID__c</fullName>
        <label>Other Address DPID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAM__Contact_Score_Rating__c</fullName>
        <description>Aggregated Contact Score Rating derived from email &amp; web activity</description>
        <formula>IF(PAM__Contact_Score__c  &gt;  10000,   &quot;Rating 1&quot;,
IF(PAM__Contact_Score__c  &gt;  8000,     &quot;Rating 2&quot;,
IF(PAM__Contact_Score__c  &gt;  4000,     &quot;Rating 3&quot;,
IF(PAM__Contact_Score__c  &gt;  1000,     &quot;Rating 4&quot;,
IF(PAM__Contact_Score__c  &gt;  1,           &quot;Rating 5&quot;,
&quot;None&quot;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Aggregated Contact Score Rating derived from email &amp; web activity</inlineHelpText>
        <label>Contact Score Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAM__Contact_Score__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Contact score based on online activity such as email opens and web visits.</description>
        <inlineHelpText>Contact score based on online activity such as email opens and web visits.</inlineHelpText>
        <label>Contact Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pager__c</fullName>
        <label>Pager</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Person_Number__c</fullName>
        <displayFormat>P{00000000}</displayFormat>
        <externalId>true</externalId>
        <label>Person Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Portal_Self_Registered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Portal Self-Registered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Portal_User_Since__c</fullName>
        <label>Portal User Since</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Portal_User_Type__c</fullName>
        <label>Portal User Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_User__c</fullName>
        <formula>IF( HIDDEN_Is_Portal_User__c = True,  IMAGE(&quot;/resource/1354161790000/MissedPayments_Check&quot;, &quot;checked&quot;), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Portal User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Predictive_Trigger_Field__c</fullName>
        <description>Need a field to trigger a field update so that Predictive Campaign Flow picks up the user.</description>
        <label>Predictive Trigger Field</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Preferred_Contact_Type__c</fullName>
        <label>Preferred Contact Type</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Site Visit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Preferred_Language__c</fullName>
        <label>Preferred Language</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japanese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>German</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greek</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Preferred_Phone_Number__c</fullName>
        <inlineHelpText>This field will be updated based on your selection of Preferred Phone Type.</inlineHelpText>
        <label>Preferred Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Preferred_Phone_Type__c</fullName>
        <label>Preferred Phone Type</label>
        <picklist>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Secondary_Contact__c</fullName>
        <label>Primary / Secondary Contact</label>
        <picklist>
            <picklistValues>
                <fullName>Primary Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary Contact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sandbox_Name__c</fullName>
        <formula>IF(ISBLANK($Setup.PortalSettings__c.Sandbox_Name__c), &apos;&apos;, &apos;.&apos; + $Setup.PortalSettings__c.Sandbox_Name__c + &apos;.cs5&apos;)</formula>
        <label>Sandbox Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stakeholder_Person__c</fullName>
        <formula>If( Account.Is_Stakeholder__c , &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stakeholder Person</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Completion_Date__c</fullName>
        <label>Survey Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Trading_Name__c</fullName>
        <formula>Account.Trading_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trading Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Contact Type</label>
        <picklist>
            <picklistValues>
                <fullName>Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Universal_Id__c</fullName>
        <externalId>true</externalId>
        <label>Universal Id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>experianqas__Updated_Touchpoints_Timestamp__c</fullName>
        <label>Updated Touchpoints Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>experianqas__Updated_Touchpoints__c</fullName>
        <label>Updated Touchpoints</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Persons</label>
    </listViews>
    <listViews>
        <fullName>Aquabiz_2010_11_Opt_in_Electronic</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>ACCOUNT.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN_MEMBER.STATUS</field>
            <operation>equals</operation>
            <value>Opt-in - Electronic</value>
        </filters>
        <label>Aquabiz 2010/11 Opt-in - Electronic</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Executives</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Mercantile_Agency</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Key_Customer_Persons</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Key_Customer_Person__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <label>Key Customer Persons</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>Persons_with_Duplicates</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DP_Key__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Persons with Duplicates</label>
    </listViews>
    <listViews>
        <fullName>Stakeholder_Persons</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stakeholder_Person__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <label>Stakeholder Persons</label>
        <sharedTo>
            <roleAndSubordinatesInternal>HeadofStakeholderManagementTeam</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <namedFilters>
        <fullName>Case_Contact</fullName>
        <active>true</active>
        <field>Case.ContactId</field>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>true</isOptional>
        <name>Case_Contact Name</name>
        <sourceObject>Case</sourceObject>
    </namedFilters>
    <namedFilters>
        <fullName>Contact_ReportsTo</fullName>
        <active>true</active>
        <field>Contact.ReportsToId</field>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Contact_Reports To</name>
        <sourceObject>Contact</sourceObject>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I90000000FMYwEAO_00NO0000000HEfZMAW</fullName>
        <active>true</active>
        <field>Billing_Account__c.eBill_Recipient__c</field>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Customer__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Billing Account_Bill Recipient</name>
        <sourceObject>Billing_Account__c</sourceObject>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I90000000FMdNEAW_00N90000001k6NWEAY</fullName>
        <active>true</active>
        <field>WaterMAP__c.Site_Manager__c</field>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Customer__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
        <name>Watermap_Site Manager</name>
        <sourceObject>WaterMAP__c</sourceObject>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I90000000FMdNEAW_00N90000001k6jEEAQ</fullName>
        <active>true</active>
        <field>WaterMAP__c.Primary_Contact__c</field>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Customer__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Watermap_Primary Contact</name>
        <sourceObject>WaterMAP__c</sourceObject>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I90000000FMdNEAW_00N90000001k6jTEAQ</fullName>
        <active>true</active>
        <field>WaterMAP__c.Secondary_Contact__c</field>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Customer__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Watermap_Secondary Contact</name>
        <sourceObject>WaterMAP__c</sourceObject>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I90000000GXObEAO_00N90000001mml3EAA</fullName>
        <active>true</active>
        <field>WaterMAP_Submission__c.Authorised_By__c</field>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Customer__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>WaterMAP Submission_Authorised By</name>
        <sourceObject>WaterMAP_Submission__c</sourceObject>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IO00000000H7LMAU_00NO0000000HEkFMAW</fullName>
        <active>true</active>
        <field>Credit_Card_Proxy__c.Person__c</field>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Customer_Account__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
        <name>Credit Card Proxy_Person Name</name>
        <sourceObject>Credit_Card_Proxy__c</sourceObject>
    </namedFilters>
    <recordTypes>
        <fullName>IOTA_Contact</fullName>
        <active>true</active>
        <label>IOTA Contact</label>
    </recordTypes>
    <validationRules>
        <fullName>Email_is_not_blank_if_type_selected</fullName>
        <active>true</active>
        <errorConditionFormula>Text( Preferred_Contact_Type__c  )=&quot;Email&quot;&amp;&amp;ISBLANK( Email )&amp;&amp; NOT(Contains($Profile.Name, &apos;Admin&apos;))</errorConditionFormula>
        <errorDisplayField>Email</errorDisplayField>
        <errorMessage>If preferred contact type is email, the email can&apos;t be blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Home_Phone_have_to_be_number</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISBLANK(HomePhone))&amp;&amp;NOT( ISNUMBER(HomePhone))</errorConditionFormula>
        <errorDisplayField>HomePhone</errorDisplayField>
        <errorMessage>Enter your phone number without spaces or special characters</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Home_phone_blank_if_picked</fullName>
        <active>true</active>
        <errorConditionFormula>Text(Preferred_Phone_Type__c )=&quot;Home&quot;&amp;&amp;ISBLANK( HomePhone)&amp;&amp; NOT(Contains($Profile.Name, &apos;Admin&apos;))</errorConditionFormula>
        <errorDisplayField>HomePhone</errorDisplayField>
        <errorMessage>If preferred phone type is home, home phone can&apos;t be blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mailing_City_Special_Characters</fullName>
        <active>true</active>
        <description>quotes and periods are not allowed in address formats</description>
        <errorConditionFormula>CONTAINS( MailingCity , &quot;\&quot;&quot;)</errorConditionFormula>
        <errorDisplayField>MailingCity</errorDisplayField>
        <errorMessage>quotes are not allowed in address formats</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mailing_Country_Special_Characters</fullName>
        <active>true</active>
        <description>quotes and periods are not allowed in address formats</description>
        <errorConditionFormula>CONTAINS( MailingCountry , &quot;\&quot;&quot;)</errorConditionFormula>
        <errorDisplayField>MailingCountry</errorDisplayField>
        <errorMessage>quotes are not allowed in address formats</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mailing_Post_Code_Special_Characters</fullName>
        <active>true</active>
        <description>quotes and periods are not allowed in address formats</description>
        <errorConditionFormula>CONTAINS( MailingPostalCode , &quot;\&quot;&quot;)</errorConditionFormula>
        <errorDisplayField>MailingPostalCode</errorDisplayField>
        <errorMessage>quotes are not allowed in address formats</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mailing_State_Special_Characters</fullName>
        <active>true</active>
        <description>quotes and periods are not allowed in address formats</description>
        <errorConditionFormula>CONTAINS( MailingState , &quot;\&quot;&quot;)</errorConditionFormula>
        <errorDisplayField>MailingState</errorDisplayField>
        <errorMessage>quotes are not allowed in address formats</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mailing_Street_Special_Characters</fullName>
        <active>true</active>
        <description>quotes and periods are not allowed in address formats</description>
        <errorConditionFormula>CONTAINS( MailingStreet , &quot;\&quot;&quot;)</errorConditionFormula>
        <errorDisplayField>MailingStreet</errorDisplayField>
        <errorMessage>quotes are not allowed in address formats</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mobile_is_not_blank_if_type_selected</fullName>
        <active>true</active>
        <errorConditionFormula>Text(Preferred_Phone_Type__c )=&quot;Mobile&quot;&amp;&amp;ISBLANK(MobilePhone)&amp;&amp; NOT(Contains($Profile.Name, &apos;Admin&apos;))</errorConditionFormula>
        <errorDisplayField>MobilePhone</errorDisplayField>
        <errorMessage>If preferred phone type is mobile, mobile number can&apos;t be blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mobile_is_number_10_digits</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISBLANK(MobilePhone))&amp;&amp;(NOT( ISNUMBER( MobilePhone ))||LEN(MobilePhone) &lt;&gt; 10)&amp;&amp; NOT(Contains($Profile.Name, &apos;Admin&apos;))</errorConditionFormula>
        <errorDisplayField>MobilePhone</errorDisplayField>
        <errorMessage>Your mobile phone number must only contain 10 digits. Enter your phone number without spaces or special characters</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mobile_is_number_10_digits_no_space</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISBLANK(MobilePhone))&amp;&amp;(NOT( ISNUMBER(  MobilePhone ))||LEN(MobilePhone) &lt;&gt; 10)&amp;&amp; NOT(Contains($Profile.Name, &apos;Admin&apos;))</errorConditionFormula>
        <errorDisplayField>MobilePhone</errorDisplayField>
        <errorMessage>Mobile phone need to be in number 10 digits and has no spaces.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_City_Special_Characters</fullName>
        <active>true</active>
        <description>quotes and periods are not allowed in address formats</description>
        <errorConditionFormula>CONTAINS( OtherCity , &quot;\&quot;&quot;)</errorConditionFormula>
        <errorDisplayField>OtherCity</errorDisplayField>
        <errorMessage>quotes are not allowed in address formats</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_Country_Special_Characters</fullName>
        <active>true</active>
        <description>quotes and periods are not allowed in address formats</description>
        <errorConditionFormula>CONTAINS(  OtherCountry , &quot;\&quot;&quot;)</errorConditionFormula>
        <errorDisplayField>OtherCountry</errorDisplayField>
        <errorMessage>quotes are not allowed in address formats</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_Phone_blank_if_preferred_is_picked</fullName>
        <active>true</active>
        <errorConditionFormula>Text(Preferred_Phone_Type__c )=&quot;Other&quot;&amp;&amp;ISBLANK( OtherPhone )&amp;&amp; NOT(Contains($Profile.Name, &apos;Admin&apos;))</errorConditionFormula>
        <errorDisplayField>OtherPhone</errorDisplayField>
        <errorMessage>If preferred phone type is other, other phone can&apos;t be blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_Phone_have_to_be_number</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISBLANK(OtherPhone))&amp;&amp;NOT( ISNUMBER(OtherPhone))</errorConditionFormula>
        <errorDisplayField>OtherPhone</errorDisplayField>
        <errorMessage>Enter your phone number without spaces or special characters</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_Post_Code_Special_Characters</fullName>
        <active>true</active>
        <description>quotes and periods are not allowed in address formats</description>
        <errorConditionFormula>CONTAINS(  OtherPostalCode , &quot;\&quot;&quot;)</errorConditionFormula>
        <errorDisplayField>OtherPostalCode</errorDisplayField>
        <errorMessage>quotes are not allowed in address formats</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_State_Special_Characters</fullName>
        <active>true</active>
        <description>quotes and periods are not allowed in address formats</description>
        <errorConditionFormula>CONTAINS( OtherState , &quot;\&quot;&quot;)</errorConditionFormula>
        <errorDisplayField>OtherState</errorDisplayField>
        <errorMessage>quotes are not allowed in address formats</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_Street_Special_Characters</fullName>
        <active>true</active>
        <description>quotes and periods are not allowed in address formats.</description>
        <errorConditionFormula>CONTAINS( OtherStreet , &quot;\&quot;&quot;)</errorConditionFormula>
        <errorDisplayField>OtherStreet</errorDisplayField>
        <errorMessage>quotes are not allowed in address formats</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Phone_have_to_be_number</fullName>
        <active>true</active>
        <errorConditionFormula>(NOT( ISBLANK(Agent_s_Phone__c ))&amp;&amp;NOT( ISNUMBER(Agent_s_Phone__c ))&amp;&amp; ISCHANGED(Agent_s_Phone__c))||
(NOT(ISBLANK(HomePhone))&amp;&amp;NOT( ISNUMBER(  HomePhone  ))&amp;&amp; ISCHANGED(HomePhone))||
(NOT(ISBLANK(OtherPhone))&amp;&amp;NOT( ISNUMBER(  OtherPhone  ))&amp;&amp; ISCHANGED(OtherPhone))||
(NOT(ISBLANK(Phone))&amp;&amp;NOT( ISNUMBER(  Phone  ))&amp;&amp;  ISCHANGED(Phone))</errorConditionFormula>
        <errorMessage>Phone needs to be numbers.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Work_Phone_have_to_be_number</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISBLANK(Phone))&amp;&amp;NOT( ISNUMBER( Phone ))</errorConditionFormula>
        <errorDisplayField>Phone</errorDisplayField>
        <errorMessage>Enter your phone number without spaces or special characters</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Work_is_blank_if_Preferred</fullName>
        <active>true</active>
        <errorConditionFormula>Text(Preferred_Phone_Type__c )=&quot;Work&quot;&amp;&amp;ISBLANK( Phone )&amp;&amp; NOT(Contains($Profile.Name, &apos;Admin&apos;))</errorConditionFormula>
        <errorDisplayField>Phone</errorDisplayField>
        <errorMessage>If preferred phone type is work, work phone can&apos;t be blank.</errorMessage>
    </validationRules>
</CustomObject>